--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "start": "webpack"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "webpack": "^3.6.0"
   }
 }
