--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/damonbauer/egghead-webpack#readme",
   "scripts": {
-    "start": "webpack"
+    "start": "npm run dev",
+    "dev": "webpack --config webpack.dev.config.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -30,6 +31,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.6.2",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-merge": "^4.1.0"
   }
 }
