--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/damonbauer/egghead-webpack#readme",
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack --config webpack.dev.config.js"
+    "dev": "webpack-dev-server --config webpack.dev.config.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -32,6 +32,7 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   }
 }
